--- a/INSTALL
+++ b/INSTALL
@@ -157,6 +157,7 @@ Needed:
 - awk (tested with gawk)
 - bc if mplayer or alsaplayer are installed (used for speed control)
 - xdg-user-dirs for localized xdg desktop user directories and icons
+- xdg-open
 
 Strongly recommended:
 ---------------------
