add IPTV FVWM_CONFIGDIR preferences for nsfw category

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+* 2022-01-15 make language subcategories  
 * 2022-01-15 add network check  
 * 2022-01-14 Add playlist script for IPTV support with mplayer  
 * 2021-12-30 Add jKmetter k12 in application menu  
