Better to initialize the variable so than an environment variable will not work wwith the script.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+* 2022-01-16 add IPTV FVWM_CONFIGDIR preferences for nsfw category  
 * 2022-01-15 make language subcategories  
 * 2022-01-15 add network check  
 * 2022-01-14 Add playlist script for IPTV support with mplayer  
