--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+* 2022-01-18 Fix playing of linear streams like many IPTV streams  
 * 2022-01-16 add IPTV FVWM_CONFIGDIR preferences for nsfw category  
 * 2022-01-15 make language subcategories  
 * 2022-01-15 add network check  
