--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2022-02-09 StartFunction cleanup of FvwmMFL loading. Need fvwm3>=1.0.4  
+* 2022-02-06 Update ChangeLog  
 * 2022-02-06 Fix the help path and text.  
 * 2022-02-05 We dont know how the user will do things, so Crystal need a Mplayer extra paramters pref file for the IPTV. Add it.  
 * 2022-02-05 New locale strings  
