--- a/addons/fvwm-crystal-script.pot
+++ b/addons/fvwm-crystal-script.pot
@@ -9,8 +9,8 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: fvwm-crystal 3.7.2\n"
-"POT-Creation-Date: 2022-02-06 01:34+0100\n"
+"Project-Id-Version: fvwm-crystal 3.7.6-svn\n"
+"POT-Creation-Date: 2022-09-30 20:09+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
